@@ -1,6 +1,6 @@
-# $Id: DISABLED,v 1.19 2008-03-18 22:59:04 danf Exp $
+# $Id: DISABLED,v 1.20 2008-03-22 22:00:21 bagder Exp $
 # This file can be used to specify test cases that should not run when all
 # test cases are run by runtests.pl. Just add the plain test case numbers, one
 # per line.
 # Lines starting with '#' letters are treated as comments.
-617
+
